<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wagz</string>
    <string name="notification_subtitle">Taking Your Dog For A Walk!</string>

    <string name="started">You and Your Dog are on a Walk!</string>
    <string name="stopped">You and Your Dog are Finished Walking.\n\nPress Menu to View Your Walk Details and See How Far You Went!</string>

    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>

    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>

    <string name="pause">Stop Walking</string>
    <string name="resume">Start Walking</string>
    <string name="reset">New Walk</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Walk Settings</string>
    <string name="pref_category_advanced">Advanced Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="walk_length_setting">Walk Length</string>
    <string name="walk_length_setting_details">How long do you want to walk?</string>
    <string name="walk_length_setting_title">Select Walk Length</string>        
    <string name="walk_percent_complete_setting">Completed Walk %</string>
    <string name="walk_percent_complete_setting_details">How much of your walking goal do you need to reach?</string>
    <string name="walk_percent_complete_setting_title">Select Completed Walk %</string>
	<string name="walk_frequency_setting">Walk Frequency</string>
    <string name="walk_frequency_setting_details">How often do you want to walk?</string>
    <string name="walk_frequency_setting_title">Select Walk Frequency</string>                
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="alert_lost_loyalty_title">Lost Loyalty</string>
    <string name="alert_lost_loyalty_explanation">It has been too long since you have walked your dog! He has lost some loyalty for you.\n\nWalk your dog every day and he will love you!</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>

    <string name="quit">Quit</string>


<string name="pref_category_notifications">Notification Settings</string>
<string name="menu_details">Walk Details</string>
<string name="start_walk">Let's Go For a Walk !</string>
<string name="ignore_reminder">I Will Not Go on a Walk Today</string>
<string name="time_units">minutes</string>
<string name="toast_quick_note">Walk Details Saved to Snaptic.com</string>
<string name="create_quick_note_button">Save Walk Details on Snaptic</string>
<string name="loyalty_desc">Walk Him Every Day and He Will Love You!</string>
<string name="happiness_desc">Walk Your Dog Longer and He Will Be Happier!</string>
<string name="stop_walk">We Are Done Walking For Now</string>
<string name="about_snaptic">You can save your Walk Details on Snaptic to remember how long you walked and how far you went. Snaptic is free and easy to use! Simply install their 3banana Notes application from the Android Marketplace and press &quot;Save Walk Details&quot;!</string>
<string name="menu_about">About</string>
<string name="about_text">A virtual dog who reminds you to walk every day for a recommended amount of time. Allows you to see how long and far you walked, and save this data to Snaptic.</string>
<string name="about_code_copyright">Copyright (c) 2010 Konreu (Conroy Whitney)</string>
<string name="about_license">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
<string name="about_url">Visit http://android.konreu.com/ for the source code to this application.</string>
<string name="about_code_attribution">Based on the Pedometer Android App by Levente Bagi (http://code.google.com/p/pedometer/)</string>
<string name="about_image_attribution">Paw icon based on the image at http://www.dog-paw-print.com/dog-paw-print-clip-art.html.Heart images based on http://www.hooplovers.com/_src/sc813/heart-128x100.jpg. </string>
<string name="about_snaptic_disclaimer">Wagz by Konreu (Conroy Whitney) is not directly affiliated with Snaptic, the makers of 3banana Notes and Snaptic.com (located at www.snaptic.com). Wagz uses the 3banana application to save and retrieve information from Snaptic.</string>
<string name="about_contest">Wagz was developed by Konreu as an entry into the Snaptic \&quot;Move Your App! Developer Challenge\&quot; located at https://www.snaptic.com/challenge/.</string>
<string name="about_thanks">Special thanks to Jessica Whitney and Brian Stoddard for their help and support in finalizing the original concept of this application.</string>
<string name="really_reset_values">Discard Your Walk Details</string>
<string name="ok">OK</string>
<string name="cancel">Cancel</string>
<string name="warning_reset_values">You will lose your Walk Details. If you would like to save your Walk Details, press Cancel and press the \&quot;Save Walk Details on Snaptic\&quot; button from the Walk Details page.\n\nWould you still like to discard your Walk Details?</string>
<string name="loyalty_label">Loyalty:   </string>
<string name="happiness_label">Happiness:   </string>
<string name="pref_category_walk">Walk Settings</string>
</resources>
