<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
        
	<PreferenceCategory
		android:title="@string/pref_category_notifications">        

	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/pref_category_walk">        

		<ListPreference
		        android:key="walk_length"
		        android:title="@string/walk_length_setting"
		        android:summary="@string/walk_length_setting_details"
		        android:entries="@array/walk_length_preference"
		        android:entryValues="@array/walk_length_preference_values"
		        android:dialogTitle="@string/walk_length_setting_title"
		        android:defaultValue="15" />
		        
<!--		<ListPreference-->
<!--		        android:key="walk_percent_complete"-->
<!--		        android:title="@string/walk_percent_complete_setting"-->
<!--		        android:summary="@string/walk_percent_complete_setting_details"-->
<!--		        android:entries="@array/walk_percent_complete_preference"-->
<!--		        android:entryValues="@array/walk_percent_complete_preference_values"-->
<!--		        android:dialogTitle="@string/walk_percent_complete_setting_title"-->
<!--		        android:defaultValue="90" />-->
<!--		        -->
<!--		<ListPreference-->
<!--		        android:key="walk_frequency"-->
<!--		        android:title="@string/walk_frequency_setting"-->
<!--		        android:summary="@string/walk_frequency_setting_details"-->
<!--		        android:entries="@array/walk_frequency_preference"-->
<!--		        android:entryValues="@array/walk_frequency_preference_values"-->
<!--		        android:dialogTitle="@string/walk_frequency_setting_title"-->
<!--		        android:defaultValue="15" />-->

	</PreferenceCategory>	
	
	<PreferenceCategory
		android:title="@string/pref_category_advanced">

		<ListPreference
		        android:key="step_length"
		        android:title="@string/step_length_setting"
		        android:summary="@string/step_length_setting_details"
		        android:dialogTitle="@string/step_length_setting_title"
		        android:entries="@array/sex_preference"
		        android:entryValues="@array/sex_preference_values"
		        android:defaultValue="30" />	            
	            
		<ListPreference
		        android:key="sensitivity"
		        android:title="@string/sensitivity_setting"
		        android:summary="@string/sensitivity_setting_details"
		        android:entries="@array/sensitivity_preference"
		        android:entryValues="@array/sensitivity_preference_values"
		        android:dialogTitle="@string/sensitivity_setting_title"
		        android:defaultValue="30" />
		
		<ListPreference
		        android:key="units"
		        android:title="@string/units_setting"
		        android:summary="@string/units_setting_details"
		        android:entries="@array/units_preference"
		        android:entryValues="@array/units_preference_values"
		        android:dialogTitle="@string/units_setting_title"
		        android:defaultValue="imperial" />
		    
	</PreferenceCategory>

</PreferenceScreen>