<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:padding="15dip">
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal"
	    android:isScrollContainer="true"
	    android:scrollbars="vertical">
	    <LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical">
			<ImageView
	   			android:src="@drawable/icon"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_gravity="top"
	        	android:layout_marginRight="10dp" />
	       <LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical"/>
	    </LinearLayout>
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:orientation="vertical">
	    	<TextView
	      		android:text="@string/app_name"
	      		android:textStyle="bold"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content" />
	      	<TextView
	      		android:id="@+id/app_version"
	      		android:textSize="11.5sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content" />
	   		<TextView
	      		android:text="@string/about_text"
	      		android:textSize="12.5sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />      		
	      	<TextView
	      		android:text="@string/about_code_copyright"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />
			<TextView
	      		android:text="@string/about_contest"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />
			<TextView
	      		android:text="@string/about_thanks"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />		      				      		
			<TextView
	      		android:text="@string/about_code_attribution"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />	
			<TextView
	      		android:text="@string/about_image_attribution"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />	     
	      	<TextView
	      		android:text="@string/about_license"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp" />
	      	<TextView
	      		android:text="@string/about_url"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp"/>
			<TextView
	      		android:text="@string/about_snaptic_disclaimer"
	      		android:textSize="11.0sp"
	      		android:layout_width="wrap_content"
	      		android:layout_height="wrap_content"
	      		android:layout_marginTop="8dp"/>	      		
	    </LinearLayout>
	</LinearLayout>
</ScrollView>