<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/margin" >
    
    <LinearLayout android:id="@+id/row_1"
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:paddingBottom="@dimen/row_spacing">
    
        <LinearLayout android:id="@+id/box_time"
            android:orientation="vertical"
            android:layout_width="@dimen/box_time_width" 
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingRight="@dimen/margin">
        
            <TextView android:id="@+id/time_value"
                android:textSize="@dimen/value"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"  
                android:paddingLeft="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingTop="@dimen/padding"/>
                
            <TextView android:id="@+id/time_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units" 
                android:text="@string/time_units" 
                android:paddingBottom="@dimen/padding"/>

        </LinearLayout>

       	<Button android:id="@+id/btn_settingz_distance"
        	android:layout_width="@dimen/box_distance_width"
        	android:layout_height="wrap_content"
        	android:gravity="center_horizontal"
        	android:text="@string/btn_settingz_distance"
        	android:layout_marginTop="20px" />

        <LinearLayout android:id="@+id/box_distance"
            android:orientation="vertical"
            android:layout_width="@dimen/box_distance_width" 
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            
            <TextView android:id="@+id/distance_value"
                android:textSize="@dimen/value"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"  
                android:paddingTop="@dimen/padding" 
                android:paddingRight="@dimen/padding" 
                android:paddingLeft="@dimen/padding"/>
                
            <TextView android:id="@+id/distance_units"
                android:gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/units"
                android:text="@string/kilometers" 
                android:paddingBottom="@dimen/padding"/>

        </LinearLayout>
        
    </LinearLayout>
    
    <ImageView android:id="@+id/snaptic_logo"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/snaptic_logo"
    	android:layout_marginTop="15px"
    	android:layout_gravity="center_horizontal"
    />
    
    <Button 
		android:text="@string/create_quick_note_button"
		android:id="@+id/create_quick_note_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
	    android:layout_marginTop="5px"
	/>
	
	<TextView android:id="@+id/about_snaptic"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5px"
		android:layout_gravity="fill_horizontal"
		android:text="@string/about_snaptic"	
	/>
           
</LinearLayout>
